--- a/app/src/main/res/layout/layout_dialog_my_qrcode.xml
+++ b/app/src/main/res/layout/layout_dialog_my_qrcode.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content" />
         
         <ImageView
+            android:background="#ff0000"
             android:id="@+id/iv_user_qrcode"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="21dp"
