--- a/app/src/main/res/layout/activity_cam_setting.xml
+++ b/app/src/main/res/layout/activity_cam_setting.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/imgV_top_bar_center"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
-                android:drawableLeft="@drawable/icon_nav_back_white"
+                android:drawableStart="@drawable/icon_nav_back_white"
                 android:drawablePadding="@dimen/x15"
                 android:padding="@dimen/x15"
                 android:text="@string/SETTINGS_1"
