替换tab关闭按钮

--- a/app/src/main/res/layout/activity_cam_setting.xml
+++ b/app/src/main/res/layout/activity_cam_setting.xml
@@ -25,10 +25,11 @@
                 android:layout_height="48dp"
                 android:drawableLeft="@drawable/nav_tab_back_selector"
                 android:drawablePadding="15dp"
-                android:padding="15dp"
+                android:paddingLeft="15dp"
+                android:gravity="center_vertical"
                 android:text="@string/SETTINGS_1"
                 android:textColor="@color/color_white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
         </FrameLayout>
     </LinearLayout>
 
@@ -169,10 +170,10 @@
                 <TextView
                     android:id="@+id/tv_setting_unbind"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="42dp"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="50dp"
-                    android:background="@color/color_f2f2f2"
+                    android:background="@drawable/un_bind_device_btn_seletor"
                     android:gravity="center"
                     android:text="@string/DELETE_CID"
                     android:textColor="@color/color_FF3D32"
