--- a/app/src/main/res/drawable/long_btn_bg_shape_4b9fd5.xml
+++ b/app/src/main/res/drawable/long_btn_bg_shape_4b9fd5.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/color_4b9fd5" />
 
-            <corners android:radius="40dp" />
+            <corners android:radius="63px" />
         </shape>
     </item>
 </layer-list>
