--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -23,10 +23,11 @@
                 android:layout_height="48dp"
                 android:drawableLeft="@drawable/nav_tab_back_selector"
                 android:drawablePadding="15dp"
-                android:padding="15dp"
+                android:paddingLeft="15dp"
+                android:gravity="center_vertical"
                 android:text="@string/EQUIPMENT_INFO"
                 android:textColor="@color/color_white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
         </FrameLayout>
     </LinearLayout>
 
