--- a/app/src/main/res/layout/fragment_home_mine_info.xml
+++ b/app/src/main/res/layout/fragment_home_mine_info.xml
@@ -264,7 +264,7 @@
             <TextView
                 android:id="@+id/btn_home_mine_personal_information"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="42dp"
                 android:gravity="center"
                 android:layout_centerVertical="true"
                 android:padding="10dp"
