--- a/app/src/main/res/layout/fragment_home_mine_message.xml
+++ b/app/src/main/res/layout/fragment_home_mine_message.xml
@@ -18,10 +18,11 @@
             android:layout_height="48dp"
             android:drawableLeft="@drawable/nav_tab_back_selector"
             android:drawablePadding="15dp"
-            android:padding="15dp"
+            android:paddingLeft="15dp"
+            android:gravity="center_vertical"
             android:text="@string/Tap1_Camera_Messages"
             android:textColor="@color/color_white"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_home_mine_message_clear"
