--- a/app/src/main/res/layout/layout_fragment_bell_setting.xml
+++ b/app/src/main/res/layout/layout_fragment_bell_setting.xml
@@ -23,8 +23,9 @@
                 android:layout_height="@dimen/y48"
                 android:drawableLeft="@drawable/nav_tab_back_selector"
                 android:drawablePadding="@dimen/x15"
-                android:padding="@dimen/x15"
-                android:text="功能设置"
+                android:paddingLeft="@dimen/x15"
+                android:gravity="center_vertical"
+                android:text="@string/SETTINGS_1"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp16" />
         </FrameLayout>
@@ -109,7 +110,7 @@
             android:layout_marginLeft="@dimen/x20"
             android:layout_marginRight="@dimen/x20"
             android:layout_marginTop="@dimen/y10"
-            android:background="@color/color_f2f2f2"
+            android:background="@drawable/un_bind_device_btn_seletor"
             android:gravity="center"
             android:text="@string/DELETE_CID"
             android:textColor="@color/color_FF3D32"
