--- a/app/src/main/res/layout/item_wonderful_guide.xml
+++ b/app/src/main/res/layout/item_wonderful_guide.xml
@@ -9,10 +9,10 @@
 
     <Button
         android:id="@+id/item_wonderful_to_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/x173"
+        android:layout_height="@dimen/y50"
         android:layout_marginTop="@dimen/y60"
-        android:background="@drawable/btn_again_normal"
+        android:background="@drawable/un_bind_device_btn_seletor"
         android:text="@string/Tap2_Index_OpenTimelapse"
         android:textColor="@color/delay_record_start_now_color"
         android:textSize="@dimen/sp17"/>
