--- a/app/src/main/res/values-sw600dp/lay_y.xml
+++ b/app/src/main/res/values-sw600dp/lay_y.xml
@@ -1,4 +1,4 @@
-<?yml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="y0">0.0dp</dimen>
     <dimen name="y1">1.6666666dp</dimen>
