--- a/app/src/main/res/layout/fragment_cloud_live_videochat.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_videochat.xml
@@ -56,7 +56,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/y26"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/btn_hulue"
+            android:src="@drawable/btn_dismiss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
