时间轴简单实现,已有更好思路,待优化

--- a/app/src/main/res/layout/fragment_home_wonderful_ext.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_ext.xml
@@ -11,43 +11,83 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.PopupOverlay">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <FrameLayout
+            android:id="@+id/fLayoutHomeWonderfulHeaderContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
+            android:minHeight="64dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
             app:statusBarScrim="@android:color/transparent">
 
-            <include layout="@layout/fragment_home_wonderful_header"/>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <RelativeLayout
+                android:id="@+id/rl_top_head_wonder"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@android:color/transparent"
-                app:layout_collapseMode="pin">
+                android:layout_height="wrap_content">
 
-                <View
+                <ImageView
+                    android:id="@+id/imgWonderfulTopBg"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_wonderful_daytime"/>
 
-                    <!--<ImageView-->
-                    <!--android:id="@+id/imgV_add_devices"-->
-                    <!--style="@style/ripple_background_borderless"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_gravity="end|center_vertical"-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:layout_marginRight="5dp"-->
-                    <!--android:padding="10dp"-->
-                    <!--android:src="@drawable/btn_common_add" />-->
-                </View>
-            </android.support.v7.widget.Toolbar>
+                <TextView
+                    android:id="@+id/tv_title_head_wonder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="18dp"
+                    android:text="每日精彩"
+                    android:textColor="@color/color_white"
+                    android:textSize="22sp"/>
 
+                <TextView
+                    android:id="@+id/tv_sec_title_head_wonder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_title_head_wonder"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="8dp"
+                    android:text="每一天的生活，都值得被记录"
+                    android:textColor="@color/color_white"
+                    android:textSize="15sp"/>
+            </RelativeLayout>
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+            <ImageView
+                android:id="@+id/img_wonderful_title_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0"
+                android:background="@color/color_0ba8cf"/>
+
+            <FrameLayout
+                android:id="@+id/fLayout_date_head_wonder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|bottom"
+                android:layout_marginTop="30dp"
+                android:descendantFocusability="blocksDescendants">
+
+                <FrameLayout
+                    android:id="@+id/fl_date_bg_head_wonder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:alpha="1"
+                    android:background="@drawable/btn_pressed_date_head_wonderful"/>
+
+                <com.cylan.jiafeigou.widget.textview.WonderfulTitleHead
+                    android:id="@+id/tv_date_item_head_wonder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:drawablePadding="5dp"
+                    android:drawableRight="@drawable/icon_date_downtag_wonderful"
+                    android:gravity="center"
+                    android:text="2016.05.02"
+                    android:textColor="@color/color_788291"
+                    android:textSize="14sp"/>
+            </FrameLayout>
+        </FrameLayout>
 
     </android.support.design.widget.AppBarLayout>
 
