--- a/app/src/main/res/drawable/btn_date_head_wonderful_selector.xml
+++ b/app/src/main/res/drawable/btn_date_head_wonderful_selector.xml
@@ -3,5 +3,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/btn_pressed_date_head_wonderful" android:state_checked="true" />
-    <item android:drawable="@drawable/btn_normal_date_head_wonderful" android:state_checked="false" />
+    <!--<item android:drawable="@drawable/btn_normal_date_head_wonderful" android:state_checked="false" />-->
 </selector>
