--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -58,49 +58,14 @@
             android:layout_height="1dp"
             android:background="@color/color_d2d2d2"/>
 
-        <com.cylan.jiafeigou.widget.wheel.TimeWheelView
-            android:id="@+id/wv_wonderful_timeline"
-            android:layout_width="match_parent"
-            android:layout_height="49dp"
-            android:background="@color/color_f6f9fa"
-            android:visibility="gone"
-            app:monthText_font="Medium"
-            />
 
     </FrameLayout>
 
-    <!--<RelativeLayout-->
-    <!--android:id="@+id/fLayout_wonderful_timeline"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="55dp"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:visibility="gone">-->
+    <com.cylan.jiafeigou.widget.wheel.WonderIndicatorWheelView
+        android:id="@+id/act_main_wonder_indicator_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"/>
 
-
-    <!--<RelativeLayout-->
-    <!--android:id="@+id/rLayout_time_line_hot"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_below="@+id/tv_time_line_pop"-->
-    <!--android:layout_marginTop="5dp"-->
-    <!--android:background="@color/color_f6f9fa">-->
-
-    <!--<View-->
-    <!--android:id="@+id/v_simple_38line"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:background="@color/color_d2d2d2"/>-->
-
-
-    <!--<com.cylan.jiafeigou.widget.wheel.WheelView-->
-    <!--android:id="@+id/wv_wonderful_timeline"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="55dp"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_below="@+id/v_simple_38line"-->
-    <!--android:layout_marginTop="5dp"/>-->
-
-
-    <!--</RelativeLayout>-->
-    <!--</RelativeLayout>-->
 </RelativeLayout>
