--- a/app/src/main/res/layout/layout_item_loading_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_loading_wonderful.xml
@@ -5,24 +5,18 @@
              android:layout_height="36dp"
              android:orientation="horizontal">
 
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:background="@color/color_e8e8e8" />-->
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
 
-        <com.cylan.jiafeigou.widget.SimpleProgressBar
+        <ProgressBar
             android:id="@+id/v_simple_38line"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            hunt:progress_radius="10dp"
-            hunt:progress_stroke_color="@color/color_4b9fd5"/>
+            android:indeterminateDrawable="@drawable/progress_bar"
+            android:padding="5dp"/>
 
         <TextView
             android:id="@+id/tv_simple_footer_text"
