--- a/app/src/main/res/layout/layout_item_vedio_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_vedio_wonderful.xml
@@ -1,17 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:hunt="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/lLayout_item_wonderful"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:clickable="true"
-              android:orientation="horizontal"
-              android:paddingLeft="10dp"
-              android:paddingRight="10dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:hunt="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/lLayout_item_wonderful"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
 
     <com.cylan.jiafeigou.widget.FateLineView
         android:id="@+id/fl_wonderful_item_time_line"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_alignBottom="@+id/tv_wonderful_item_footer"
+        android:layout_alignTop="@+id/rLayout_wonderful_item_wonder"
         android:layout_marginLeft="8dp"
         android:paddingRight="2dp"
         hunt:dashLineColor="@color/color_e8e8e8"
@@ -21,14 +23,15 @@
         hunt:outerCircleColor="@color/color_e8e8e8"
         hunt:outerCircleRadius="10dp"
         hunt:outerCircleStrokeWidth="4dp"
-        hunt:outerCircleY="16dp"/>
+        hunt:outerCircleY="12dp"/>
 
     <RelativeLayout
         android:id="@+id/rLayout_wonderful_item_wonder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="5dp">
+        android:layout_toRightOf="@+id/fl_wonderful_item_time_line"
+        android:paddingBottom="8dp">
 
         <TextView
             android:id="@+id/tv_wonderful_item_date"
@@ -66,21 +69,21 @@
         <RelativeLayout
             android:id="@+id/fLayout_wonderful_item_bottom"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/ccccc"
-            android:layout_gravity="bottom">
+            android:paddingBottom="22dp"
+            android:paddingTop="19dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
 
                 <TextView
                     android:id="@+id/tv_wonderful_item_delete"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:paddingLeft="12dp"
                     android:paddingRight="10dp"
@@ -96,8 +99,9 @@
 
                 <TextView
                     android:id="@+id/tv_wonderful_item_device_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:maxLength="8"
                     android:paddingLeft="10dp"
@@ -105,24 +109,26 @@
                     android:text="@string/Tap2_Index_DemoVideo"
                     android:textColor="@color/color_909090"
                     android:textSize="11sp"/>
+
+                <TextView
+                    android:id="@+id/tv_wonderful_item_share"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="12dp"
+                    android:drawableLeft="@drawable/icon_share_item_wonderful_selector"
+                    android:drawablePadding="4dp"
+                    android:drawableStart="@drawable/icon_share_item_wonderful_selector"
+                    android:gravity="center"
+                    android:text="@string/Tap3_ShareDevice_Button"
+                    android:textColor="@color/color_909090"
+                    android:textSize="11sp"/>
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_wonderful_item_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="12dp"
-                android:drawableLeft="@drawable/icon_share_item_wonderful_selector"
-                android:drawablePadding="4dp"
-                android:drawableStart="@drawable/icon_share_item_wonderful_selector"
-                android:gravity="center"
-                android:text="@string/Tap3_ShareDevice_Button"
-                android:textColor="@color/color_909090"
-                android:textSize="11sp"/>
 
         </RelativeLayout>
+
 
         <View
             android:layout_width="match_parent"
@@ -131,4 +137,18 @@
             android:layout_gravity="bottom"
             android:background="@color/color_e8e8e8"/>
     </RelativeLayout>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_wonderful_item_footer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/rLayout_wonderful_item_wonder"
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/white"
+
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="这是底线"
+        android:textColor="#333333"
+        android:textSize="14sp"/>
+</RelativeLayout>
